# AnimationEngine

./: .gitignore  CMakeLists.txt  README.md
lib/: glfw3.lib
src/: App.h  main.cpp
